# shareDemo

./: build.gradle  config.gradle  gradle.properties  settings.gradle
app/: .gitignore  build.gradle  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  loop_data.h  loop_hook.cpp
appHook/: build.gradle
appHook/src/main/: AndroidManifest.xml
baseUtils/: build.gradle
baseUtils/src/main/: AndroidManifest.xml
common/: build.gradle
common/src/main/: AndroidManifest.xml
fphook/: build.gradle
fphook/src/main/: AndroidManifest.xml
gradle/wrapper/: gradle-wrapper.properties
hacker/: .gitignore  build.gradle
hacker/src/main/: AndroidManifest.xml
hacker/src/main/cpp/: CMakeLists.txt  hacker.cpp
hook/: build.gradle
hook/src/main/: AndroidManifest.xml
libcamera/: build.gradle
libcamera/src/main/: AndroidManifest.xml
libcommonui/: build.gradle
libcommonui/src/main/: AndroidManifest.xml
libtest/: build.gradle
libtest/src/main/: AndroidManifest.xml
live/: build.gradle
live/src/main/: AndroidManifest.xml
multitype/: build.gradle
multitype/src/main/: AndroidManifest.xml
multitypedemo/: build.gradle
myapplication/: build.gradle
myapplication/src/main/: AndroidManifest.xml
pager/: build.gradle
pager/src/main/: AndroidManifest.xml
perf_monitor/: build.gradle
perf_monitor/src/main/: AndroidManifest.xml
plugintest/: build.gradle
plugintest/src/main/: AndroidManifest.xml
processor/: build.gradle
release-tools/: beauty.keystore  cert.gradle
slive_plugin/: build.gradle
(+342 files in other folders)
